--- a/paraibike/package.json
+++ b/paraibike/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.2",
     "ngx-bootstrap": "^10.3.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
