--- a/front/paraibike/package.json
+++ b/front/paraibike/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ngrx/store": "^15.4.0",
     "angular-material-icons": "^0.7.1",
     "bootstrap": "^5.3.2",
     "jquery": "^3.5.1",
